Migrate to Databricks Asset Bundles
- Add databricks.yml and job definitions
- Remove Pulumi infrastructure code
- Update README and .gitignore

All infrastructure now managed via Databricks Asset Bundles (YAML in Git).

--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,18 @@
-# Pulumi
-.pulumi/
-*.pyc
-__pycache__/
-venv/
-*.pyc
-*.pyo
-*.pyd
-
-# Pulumi secrets - DO NOT COMMIT (contains encrypted tokens)
-Pulumi.*.yaml
-
-# Pulumi state files (if using local state)
-Pulumi.*.yaml.backup
-
-# Temporary/debug scripts
-check_*.py
-sync_*.py
-create_notebook.py
-get_*_id.py
+# Databricks CLI
+.databricks/
+.env
+.env.local
 
 # Python
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
+__pycache__/
+*.pyc
+venv/
 *.egg-info/
-.installed.cfg
-*.egg
 
 # IDE
 .vscode/
 .idea/
 *.swp
-*.swo
-*~
 
 # OS
 .DS_Store
-Thumbs.db
-
